--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,37 @@
     <artifactId>pocNew</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <repositories>
+        <repository>
+            <id>unknown-jars-temp-repo</id>
+            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
+            <url>file:${project.basedir}/lib</url>
+        </repository>
+    </repositories>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    
+    <dependencies>
+  	<!-- https://mvnrepository.com/artifact/com.github.rwl/jtransforms -->
+	<dependency>
+	    <groupId>com.github.rwl</groupId>
+	    <artifactId>jtransforms</artifactId>
+	    <version>2.4.0</version>
+	</dependency>
+  	<!-- https://mvnrepository.com/artifact/jfree/jfreechart -->
+	<dependency>
+	    <groupId>jfree</groupId>
+	    <artifactId>jfreechart</artifactId>
+	    <version>1.0.13</version>
+	</dependency>
+        <dependency>
+            <groupId>unknown.binary</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+  
 </project>
